2007-05-11  Martin Leidig  <mleidig@schlund.de>

	Enable native XMLHttpRequest usage by default for Opera (instead
	of iframe fallback), because current versions don't have problems
	any longer.

	* projects/core/script/httpRequest.js
	* projects/core/script/xmlRequest.js

2007-05-10  Martin Leidig  <mleidig@schlund.de>

	Released Pfixcore 0.10.1
	
	* build.xml: Changed development version to 0.10.2-pre

2007-05-09  Martin Leidig  <mleidig@schlund.de>

	Fixed "Cookie setting problem with reused SPDocuments". Cookies still
	aren't set at responses based on a reused DOM, but now they're set at
	error responses (including 302 status responses) too.

	* src/de/schlund/pfixxml/AbstractXMLServlet.java: Set cookies on error
	responses.

2007-05-08  Martin Leidig  <mleidig@schlund.de>

	Fixed "multiple getWriter() call problem", which could occur when an 
	exception is thrown during the writing of a JSON response, which in
	turn can trigger a ServletException and a second getWriter() call.

	* src/de/schlund/pfixcore/webservice/WebServiceServlet.java: Don't throw
	ServletException if HttpServletResponse is already committed.
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java: Ensure
	that Writers are closed before returning to the caller.

2007-05-04  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/testsuite/util/TargetGeneratorBenchmarkFactory.java: 
	* src/de/schlund/pfixcore/testsuite/util/TargetGeneratorBenchmarkUtil.java: 
	* stuff/targetgenbenchmark/runbenchmark.sh: 
	Created benchmark utility for TargetGenerator.
	
	* src/de/schlund/pfixcore/editor2/core/spring/internal/ProjectImpl.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/PageFactoryService.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/PageFactoryServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/core/spring/TargetFactoryServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/frontend/resources/PagesResourceImpl.java: 